--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -15,17 +15,17 @@
         <div class="main-panel">
             <div class="main-panel__container">
                 <div class="main-panel__logo-container">
-                    <img src="../assets/icons/main-logo.svg" alt="logo" class="logo__icon">
+                    <img src="../../assets/icons/main-logo.svg" alt="logo" class="logo__icon">
                     <span class="logo__title">Saudade</span>
                 </div>
                 <form action="" class="main-panel__login-form">
                     <div class="login-input__container">
                         <input type="text" class="login-input__input" placeholder="Логин" name="login">
-                        <img src="../assets/icons/human.svg" alt="" class="login-input__icon">
+                        <img src="../../assets/icons/human.svg" alt="" class="login-input__icon">
                     </div>
                     <div class="login-input__container">
                         <input type="password" class="login-input__input" placeholder="Пароль" name="password">
-                        <img src="../assets/icons/closed-eye.svg" alt="" class="login-input__icon" >
+                        <img src="../../assets/icons/closed-eye.svg" alt="" class="login-input__icon" >
                     </div>
                 </form>
                 <div class="main-panel__btns">
