--- a/pages/registration/index.html
+++ b/pages/registration/index.html
@@ -24,13 +24,20 @@
                         <img src="../../assets/icons/human.svg" alt="" class="logreg-input__icon">
                     </div>
                     <div class="logreg-input__container">
+                        <input type="text" class="logreg-input__input" placeholder="Email" name="Email">
+                    </div>
+                    <div class="logreg-input__container">
                         <input type="password" class="logreg-input__input" placeholder="Пароль" name="password">
+                        <img src="../../assets/icons/closed-eye.svg" alt="" class="logreg-input__icon" >
+                    </div>
+                    <div class="logreg-input__container">
+                        <input type="password" class="logreg-input__input" placeholder="Подтвердите пароль" name="password">
                         <img src="../../assets/icons/closed-eye.svg" alt="" class="logreg-input__icon" >
                     </div>
                 </form>
                 <div class="main-panel__btns">
-                    <button class="main-panel__btn-item main-panel__btn-item_login">Вход</button>
-                    <button class="main-panel__btn-item main-panel__btn-item_darker">Регистрация</button>
+                    <button class="main-panel__btn-item">Зарегистрироваться</button>
+                    <button class="main-panel__btn-item main-panel__btn-item_darker">Перейти на странцу авторизации</button>
                 </div>
             </div>
         </div>
