profile_add_posts

--- a/pages/profile/index.html
+++ b/pages/profile/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="profile_info">
             <div class="profile_info__container">
-                <a href="/" class="profile_info-nickname">Поедатель облаков</a>
+                <a href="/" class="profile_info-robo-big">Поедатель облаков</a>
             </div>
             <div class="profile_info__container">
                 <a href="/" class="profile_info-roboto-middle">Москва, Россия</a>
@@ -63,7 +63,17 @@
                 <button class="profile__btn-item profile__btn-item-white">Сообщение</button>
             </div>
         </div>
-        
+        <div class="profile_posts">
+            <div class="profile_posts__container profile_info-robo-big">Посты</div>
+            <div class="profile_posts__container">
+                <img src="/img/aa.jpg" class="profile_post" alt="Post">
+                <div class="profile_info-robo-middle">Автор поста: Поедатель облаков</div>
+            </div>
+            <div class="profile_posts__container">
+                <img src="/img/aa.jpg" class="profile_post" alt="Post">
+                <div class="profile_info-robo-middle">Автор поста: Поедатель облаков</div>
+            </div>
+        </div>
     </main>
     <script type="module" src="/login.js"></script>
     <script type="module" src="/validation.js"></script>
