--- a/src/pages/registration/index.html
+++ b/src/pages/registration/index.html
@@ -10,52 +10,70 @@
                 <span class="logo__title">Saudade</span>
             </div>
             <form action="" class="main-panel__logreg-form" id="register-form">
-                <div class="logreg-input__container">
-                    <input
-                        type="text"
-                        class="logreg-input__input"
-                        placeholder="Логин"
-                        name="login"
-                    />
-                    <img
-                        src="/assets/icons/human.svg"
-                        alt=""
-                        class="logreg-input__icon"
-                    />
+                <div class="logreg__container" id="reg-login">
+                    <div class="logreg-input__container">
+                        <input
+                            type="text"
+                            class="logreg-input__input"
+                            placeholder="Логин"
+                            name="login"
+                        />
+                        <img
+                            src="/assets/icons/human.svg"
+                            alt=""
+                            class="logreg-input__icon"
+                        />
+                    </div>
+                    <div class="logreg__msg-err"></div>
                 </div>
-                <div class="logreg-input__container">
-                    <input
-                        type="text"
-                        class="logreg-input__input"
-                        placeholder="Email"
-                        name="email"
-                    />
+                <div class="logreg__container" id="reg-email">
+                    <div class="logreg-input__container">
+                        <input
+                            type="text"
+                            class="logreg-input__input"
+                            placeholder="Email"
+                            name="email"
+                        />
+                        <img
+                            src="/assets/icons/human.svg"
+                            alt=""
+                            class="logreg-input__icon"
+                        />
+                    </div>
+                    <div class="logreg__msg-err"></div>
                 </div>
-                <div class="logreg-input__container">
-                    <input
-                        type="password"
-                        class="logreg-input__input"
-                        placeholder="Пароль"
-                        name="password1"
-                    />
-                    <img
-                        src="/assets/icons/closed-eye.svg"
-                        alt=""
-                        class="logreg-input__icon"
-                    />
+                <div class="logreg__container" id="reg-pass1">
+                    <div class="logreg-input__container">
+                        <input
+                            type="password"
+                            class="logreg-input__input"
+                            placeholder="Пароль"
+                            name="password1"
+                        />
+                        <img
+                            src="/assets/icons/human.svg"
+                            alt=""
+                            class="logreg-input__icon"
+                        />
+                    </div>
+                    <div class="logreg__msg-err"></div>
                 </div>
-                <div class="logreg-input__container">
-                    <input
-                        type="password"
-                        class="logreg-input__input"
-                        placeholder="Подтвердите пароль"
-                        name="password2"
-                    />
-                    <img
-                        src="/assets/icons/closed-eye.svg"
-                        alt=""
-                        class="logreg-input__icon"
-                    />
+
+                <div class="logreg__container" id="reg-pass2">
+                    <div class="logreg-input__container">
+                        <input
+                            type="password"
+                            class="logreg-input__input"
+                            placeholder="Подтвердите пароль"
+                            name="password2"
+                        />
+                        <img
+                            src="/assets/icons/human.svg"
+                            alt=""
+                            class="logreg-input__icon"
+                        />
+                    </div>
+                    <div class="logreg__msg-err"></div>
                 </div>
             </form>
             <div class="main-panel__btns">
